--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Montserrat:wght@100&family=Noto+Serif+Display&display=swap");
+@font-face {
+  font-family: 'Voga';
+  src: url('./fonts/Voga-Medium.otf') format('otf');
+}
+@import url('https://fonts.googleapis.com/css2?family=Imbue:opsz@10..100&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Voga", "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
