--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Imbue:opsz@10..100&display=swap');
 
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Voga", "Segoe UI", "Roboto", "Oxygen",
